Fix unintended horizontal scrollbar

--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -1,5 +1,5 @@
 #navbar::after {
-  width: 100vw;
+  width: 100%;
   height: 1px;
   background-color: rgba(255, 255, 255, 0.24);
   content: '';
